--- a/1_str.ipynb
+++ b/1_str.ipynb
@@ -2,7 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "\n",
+      "hello\n",
+      "\n",
+      "hello\n",
+      "world\n",
+      "\n",
+      "hello\n",
+      "world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列の基本\n",
+    "# ==============\n",
+    "print(\"hello\")\n",
+    "print('\\nhello')\n",
+    "print(\"\"\"\n",
+    "hello\n",
+    "world\"\"\")\n",
+    "print('''\n",
+    "hello\n",
+    "world''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "z\n",
+      "abc\n",
+      "abcdefghijklmnopqrstuvwxyz\n",
+      "abcdefghijklmnopqrstuvwxy\n",
+      "acegikmoqsuwy\n",
+      "zyxwvutsrqponmlkjihgfedcba\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列のスライス\n",
+    "# ==================\n",
+    "# [start, end, step]\n",
+    "# startは当該indexを含める\n",
+    "# endは当該indexを含めない\n",
+    "letters = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "print(letters[0])\n",
+    "print(letters[-1])\n",
+    "print(letters[0:3])\n",
+    "print(letters[0:])\n",
+    "print(letters[:-1])\n",
+    "print(letters[0:26:2])\n",
+    "print(letters[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,6 +92,8 @@
     }
    ],
    "source": [
+    "# 文字列の判別\n",
+    "# ==================\n",
     "# 文字列が数字と文字のみの場合にTrueを返す\n",
     "print(\"abc\".isalnum())\n",
     "print(\"あいう\".isalnum())\n",
@@ -264,17 +339,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABC\n",
-      "123!\n",
-      "あいう\n"
+      "ERASER MOTOR PHANTOM\n"
      ]
     }
    ],
    "source": [
     "# 文字列をすべて大文字に変換する\n",
-    "print(\"abc\".upper())\n",
-    "print(\"123!\".upper())\n",
-    "print(\"あいう\".upper())"
+    "# アルファベット以外の文字は変換されない\n",
+    "print(\"eRAseR mOToR pHAntOM\".upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eraser motor phantom\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列(アルファベットのみ)をすべて小文字に変換する\n",
+    "# アルファベット以外の文字は変換されない\n",
+    "print(\"eRAseR mOToR pHAntOM\".lower())"
    ]
   },
   {
@@ -288,44 +381,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abc\n",
-      "123!\n",
-      "あいう\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 文字列をすべて小文字に変換する\n",
-    "print(\"ABC\".lower())\n",
-    "print(\"123!\".lower())\n",
-    "print(\"あいう\".lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ABCxyz\n",
-      "123!あいう\n"
+      "EraSEr MotOr PhaNTom\n"
      ]
     }
    ],
    "source": [
     "# 大文字を小文字に、小文字を大文字に変換する\n",
-    "print(\"abcXYZ\".swapcase())\n",
-    "print(\"123!あいう\".swapcase())"
+    "# アルファベット以外の文字は変換されない\n",
+    "print(\"eRAseR mOToR pHAntOM\".swapcase())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -334,24 +402,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
-      "Hello\n",
-      "Hello world\n",
-      "Hello world\n"
+      "Eraser motor phantom\n"
      ]
     }
    ],
    "source": [
     "# 先頭の一文字を大文字にし、それ以外を小文字にする\n",
-    "print(\"hello\".capitalize())\n",
-    "print(\"heLLO\".capitalize())\n",
-    "print(\"hello world\".capitalize())\n",
-    "print(\"hello World\".capitalize())"
+    "print(\"eRAseR mOToR pHAntOM\".capitalize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -360,19 +422,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
-      "Hello\n",
-      "Hello World\n",
-      "Hello World\n"
+      "Eraser Motor Phantom\n"
      ]
     }
    ],
    "source": [
     "# 単語ごとに大文字1文字 + 小文字の形式に変換する\n",
-    "print(\"hello\".title())\n",
-    "print(\"heLLO\".title())\n",
-    "print(\"hello world\".title())\n",
-    "print(\"hello World\".title())"
+    "print(\"eRAseR mOToR pHAntOM\".title())"
    ]
   },
   {
@@ -981,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
