--- a/3_list_dict_tuple_set.ipynb
+++ b/3_list_dict_tuple_set.ipynb
@@ -15,7 +15,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# リストのコピー\n",
+    "# ================\n",
+    "# リストはイミュータブルなオブジェクトのため、一度変数に代入したオブジェクトを再び別の変数で参照することはしない\n",
+    "sample = [1, 2, 3, 4, 5]\n",
+    "print(sample.copy())\n",
+    "print(list(sample))\n",
+    "print(sample[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# リスト・タプルのアンパック\n",
+    "# ===========================\n",
+    "sample_list = [1,2,3]\n",
+    "a, b, c = sample_list\n",
+    "print(a, b, c)\n",
+    "\n",
+    "sample_tuple = (1,2,3)\n",
+    "e, f, g = sample_tuple\n",
+    "print(e, f, g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -27,28 +82,31 @@
       "[1, 'two', 'three', 4, 5]\n",
       "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
       "[-3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
-      "[0, 1, 2, 3, 4, 5]\n"
+      "[1, 2, 3, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
+    "# 要素の追加と削除と置換\n",
+    "# ======================\n",
+    "sample = [1, 2, 3, 4, 5]\n",
     "# スライスを使った要素の置換\n",
-    "sample_list = [1, 2, 3, 4, 5]\n",
+    "sample_list = sample.copy()\n",
     "sample_list[1:3] = [\"two\", \"three\"]\n",
     "print(sample_list)\n",
     "\n",
     "# 末尾に要素の追加\n",
-    "sample_list = [1, 2, 3, 4, 5]\n",
+    "sample_list = sample.copy()\n",
     "sample_list[5:] = [6, 7, 8, 9]\n",
     "print(sample_list)\n",
     "\n",
     "# 先頭に要素を追加\n",
-    "sample_list = [1, 2, 3, 4, 5]\n",
+    "sample_list = sample.copy()\n",
     "sample_list[:0] = [-3, -2, -1, 0]\n",
     "print(sample_list)\n",
     "\n",
     "# リストの間に要素を追加\n",
-    "sample_list = [0, 1, 2, 4, 5]\n",
+    "sample_list = sample.copy()\n",
     "sample_list[3:3] = [3]\n",
     "print(sample_list)"
    ]
@@ -73,6 +131,29 @@
     "sample_list = [0, 1, 2, 3, 4, 5]\n",
     "del sample_list[0:3]\n",
     "print(sample_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inを使った要素の存在確認\n",
+    "sample = [1, 2, 3]\n",
+    "print(1 in sample)\n",
+    "print(5 in sample)"
    ]
   },
   {
@@ -372,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -381,12 +462,158 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['name', 'body', 'id', 'title'])\n",
-      "<class 'dict_keys'>\n",
-      "name\n",
-      "body\n",
-      "id\n",
-      "title\n"
+      "{'name': 'mido', 'age': 25}\n",
+      "{'name': 'mido', 'age': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictのコピー\n",
+    "# ================\n",
+    "# dictはイミュータブルなオブジェクトのため、一度変数に代入したオブジェクトを再び別の変数で参照することはしない\n",
+    "sample = dict(name=\"mido\", age=25)\n",
+    "print(sample.copy())\n",
+    "print(dict(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'mido', 'age': 25}\n",
+      "{'name': 'mido', 'age': 25}\n",
+      "{'name': 'mido', 'age': 25}\n",
+      "{'name': 'mido', 'age': 25}\n",
+      "{'name': 'mido', 'age': 25}\n",
+      "{'a': 'b', 'd': 'e', 'c': 'd'}\n",
+      "{'a': 'b', 'd': 'e', 'c': 'd'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 辞書の作成\n",
+    "# =================\n",
+    "\n",
+    "# {}による作成\n",
+    "sample = {\"name\":\"mido\", \"age\":25}\n",
+    "print(sample)\n",
+    "\n",
+    "#  dict()による作成\n",
+    "print(dict(name=\"mido\", age=25))\n",
+    "\n",
+    "sample = [[\"name\", \"mido\"], [\"age\", 25]]\n",
+    "print(dict(sample))\n",
+    "\n",
+    "sample = [(\"name\", \"mido\"), (\"age\", 25)]\n",
+    "print(dict(sample))\n",
+    "\n",
+    "sample = ([\"name\", \"mido\"], [\"age\", 25])\n",
+    "print(dict(sample))\n",
+    "\n",
+    "sample = [\"ab\", \"cd\", \"de\"]\n",
+    "print(dict(sample))\n",
+    "\n",
+    "sample = (\"ab\", \"cd\", \"de\")\n",
+    "print(dict(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mido\n",
+      "{'name': 'k-ta', 'age': 25}\n",
+      "{'name': 'mido', 'greet': 'hello', 'age': 25}\n",
+      "{'age': 25}\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 要素の追加と削除\n",
+    "# =================\n",
+    "sample = dict(name=\"mido\", age=25)\n",
+    "\n",
+    "# valueの参照 ※keyが存在しない場合はKeyErrorとなる\n",
+    "sample_dict = sample.copy()\n",
+    "print(sample_dict[\"name\"])\n",
+    "\n",
+    "# valueの置換\n",
+    "sample_dict = sample.copy()\n",
+    "sample_dict[\"name\"] = \"k-ta\"\n",
+    "print(sample_dict)\n",
+    "\n",
+    "# valueの追加\n",
+    "sample_dict = sample.copy()\n",
+    "sample_dict[\"greet\"] = \"hello\"\n",
+    "print(sample_dict)\n",
+    "\n",
+    "# valueの削除 ※keyが存在しない場合はKeyErrorとなる\n",
+    "sample_dict = sample.copy()\n",
+    "del sample_dict[\"name\"]\n",
+    "print(sample_dict)\n",
+    "\n",
+    "# 全ての要素の削除\n",
+    "sample_dict = sample.copy()\n",
+    "sample_dict.clear()\n",
+    "print(sample_dict)\n",
+    "\n",
+    "sample_dict = sample.copy()\n",
+    "sample_dict = {}\n",
+    "print(sample_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in を使った要素の存在確認\n",
+    "sample = dict(age=25, name=\"mido\")\n",
+    "print(\"name\" in sample)\n",
+    "print(\"greet\" in sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age'])\n",
+      "<class 'dict_keys'>\n"
      ]
     }
    ],
@@ -394,7 +621,7 @@
     "# keys()\n",
     "# text : ディクショナリに登録されているキーの一覧を返す\n",
     "# return : dict_keysオブジェクト(iterable)\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
     "key = sample_dict.keys()\n",
     "print(key)\n",
     "print(type(key))"
@@ -402,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -411,7 +638,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "midori\n",
+      "mido\n",
       "-1\n"
      ]
     }
@@ -421,7 +648,7 @@
     "# text : dictからkeyに対応するvalueを返す。keyが存在しない場合はdefaultを返す\n",
     "# param : key - dictのkey, default - keyが存在しない場合にdefaultを返す\n",
     "# return : keyに対応するvalue\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
     "val = sample_dict.get(\"name\", -1)\n",
     "print(val)\n",
     "val = sample_dict.get(\"hey\", -1)\n",
@@ -430,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -439,9 +666,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "midori\n",
-      "202-0004\n",
-      "{'name': 'midori', 'postcode': '202-0004', 'body': 'Pythonista!', 'id': 1, 'title': 'Hello World'}\n"
+      "mido\n",
+      "hello\n",
+      "{'name': 'mido', 'greet': 'hello', 'age': 25}\n"
      ]
     }
    ],
@@ -450,18 +677,18 @@
     "# text : dictからkeyに対応するvalueを返す。keyが存在しない場合はdictにdefaultを登録し、defaultを返す\n",
     "# param : key - dictのkey, default - keyが存在しない場合にdefaultを返す\n",
     "# return : keyに対応するvalue\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
     "val = sample_dict.setdefault(\"name\", -1)\n",
     "print(val)\n",
     "\n",
-    "val = sample_dict.setdefault(\"postcode\", \"202-0004\")\n",
+    "val = sample_dict.setdefault(\"greet\", \"hello\")\n",
     "print(val)\n",
     "print(sample_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('name', 'midori'), ('body', 'Pythonista!'), ('id', 1), ('title', 'Hello World')])\n",
+      "dict_items([('name', 'mido'), ('age', 25)])\n",
       "<class 'dict_items'>\n"
      ]
     }
@@ -479,7 +706,7 @@
     "# items()\n",
     "# text : dictに登録されているkeyとvalueをペアにしたタプルのリストを返す。\n",
     "# return : dict_items(タプルのリスト)\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
     "item = sample_dict.items()\n",
     "print(item)\n",
     "print(type(item))"
@@ -487,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -496,7 +723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values(['midori', 'Pythonista!', 1, 'Hello World'])\n",
+      "dict_values(['mido', 25])\n",
       "<class 'dict_values'>\n"
      ]
     }
@@ -505,7 +732,7 @@
     "# values()\n",
     "# text : dictに登録されているvalueの一覧を返す\n",
     "# return : dict_values(iterable)\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
     "value = sample_dict.values()\n",
     "print(value)\n",
     "print(type(value))"
@@ -513,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -522,8 +749,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'postcode': '2020004', 'body': 'Pythonista!', 'name': 'keita', 'address': 'Tokyo', 'id': 1, 'title': 'Hello World'}\n",
-      "{'postcode': '2020004', 'body': 'Pythonista!', 'name': 'keita', 'address': 'Tokyo', 'id': 1, 'title': 'Hello World'}\n"
+      "{'name': 'keita', 'greet': 'hello', 'age': 25}\n",
+      "{'name': 'keita', 'greet': 'hello', 'age': 25}\n"
      ]
     }
    ],
@@ -532,44 +759,12 @@
     "# text : 引数のelementをdictに追加する。すでにkeyが存在している場合は上書きする。\n",
     "# param : element - [(key, value), (key1, value)...]もしくはkey=value, key=value\n",
     "# return : None\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
-    "sample_dict.update([(\"postcode\", \"2020004\"), (\"address\", \"Tokyo\"), (\"name\", \"keita\")])\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
+    "sample_dict.update([(\"greet\", \"hello\"), (\"name\", \"keita\")])\n",
     "print(sample_dict)\n",
     "\n",
-    "sample_dict = dict(id=1, name=\"midori\", title=\"Hello World\", body=\"Pythonista!\")\n",
-    "sample_dict.update(postcode=\"2020004\", address=\"Tokyo\", name=\"keita\")\n",
-    "print(sample_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'midorikawa', 'age': 25}\n",
-      "{'name': 'keita', 'age': 25}\n",
-      "keita\n",
-      "{'name': 'keita'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# dictの基本操作\n",
-    "sample_dict = dict()\n",
-    "sample_dict[\"name\"] = \"midorikawa\"\n",
-    "sample_dict[\"age\"] = 25\n",
-    "print(sample_dict)\n",
-    "sample_dict[\"name\"] = \"keita\"\n",
-    "print(sample_dict)\n",
-    "print(sample_dict[\"name\"])\n",
-    "#print(sample_dict[\"spam\"])\n",
-    "del sample_dict[\"age\"]\n",
+    "sample_dict = dict(age=25, name=\"mido\")\n",
+    "sample_dict.update(greet=\"hello\", name=\"keita\")\n",
     "print(sample_dict)"
    ]
   },
@@ -598,12 +793,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "########################################\n",
+    "# set\n",
+    "########################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4}\n",
+      "{'name', 'age'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setの作成\n",
+    "# =================\n",
+    "\n",
+    "# 空集合を作成する\n",
+    "empty_set = set()\n",
+    "print(empty_set)\n",
+    "\n",
+    "# リテラルによる集合の作成\n",
+    "num_set = {1,2,3,4,5}\n",
+    "print(num_set)\n",
+    "\n",
+    "# リストから作成する\n",
+    "num_set = set([1,2,3,4,3,4])\n",
+    "print(num_set)\n",
+    "\n",
+    "# タプルから作成する\n",
+    "num_set = set((1,2,3,4,3,4))\n",
+    "print(num_set)\n",
+    "\n",
+    "# dictから作成する ※keyの集合を作成する\n",
+    "num_set = set(dict(name=\"mido\", age=\"25\"))\n",
+    "print(num_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inを使って値の存在確認をする\n",
+    "print(1 in {1,2,3,4})\n",
+    "print(10 in {1,2,3,4})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{12}\n",
+      "{12}\n",
+      "{16, 9, 12}\n",
+      "{16, 9, 12}\n",
+      "{9}\n",
+      "{9}\n",
+      "{16, 9}\n",
+      "{16, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 集合の計算\n",
+    "a = {9, 12}\n",
+    "b = {12, 16}\n",
+    "\n",
+    "# 積集合(aとbに共通してある要素)\n",
+    "print(a & b)\n",
+    "print(a.intersection(b))\n",
+    "\n",
+    "# 和集合(aとbのどちらかに存在している要素)\n",
+    "print(a | b)\n",
+    "print(a.union(b))\n",
+    "\n",
+    "# 差集合(aには含まれていて、bには含まれていない要素)\n",
+    "print(a - b)\n",
+    "print(a.difference(b))\n",
+    "\n",
+    "# 排他的論理和(aとbどちらか片方には含まれているが、両方には含まれていない要素)\n",
+    "print(a ^ b)\n",
+    "print(a.symmetric_difference(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1,2,3,4,5,6,7,8,9}\n",
+    "b = {2,4,6,8}\n",
+    "c = {3,6,9}\n",
+    "\n",
+    "# 集合Bが集合Aの部分集合になっているか確かめる\n",
+    "print(b <= a)\n",
+    "print(b.issubset(b))\n",
+    "\n",
+    "# 集合Bが集合Aの真部分集合となっているか確かめる(集合AがBの全要素に加えて別の要素も持っている)\n",
+    "print(b < a)\n",
+    "\n",
+    "# 集合Aが集合Bの上位集合になっているか確かめる\n",
+    "print(a >= b)\n",
+    "print(a.issuperset(b))\n",
+    "\n",
+    "# 集合Aが集合Bの真上位集合になっているか確かめる(集合AがBの全要素に加えて別の要素も持っている)\n",
+    "print(a > b)"
+   ]
   }
  ],
  "metadata": {
@@ -622,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
