--- a/9_os_shutil.ipynb
+++ b/9_os_shutil.ipynb
@@ -616,14 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "####################################################\n",
-    "# Shutil\n",
+    "# shutil\n",
     "####################################################\n",
     "import shutil\n",
     "import os"
@@ -1760,7 +1760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
