--- a/20151015_hashlib.ipynb
+++ b/20151015_hashlib.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "'01666b31dfe216eed932ced22d8e19c5e152b2b8'"
+       "'4b9c21d24f78d595242a9d8dbc19c2f33c723610d6de06a9219432e47762072c'"
       ]
      },
      "execution_count": 3,
@@ -64,39 +64,8 @@
     }
    ],
    "source": [
-    "hashlib.sha1(\"keita\".encode(\"utf-8\")).hexdigest()"
+    "hashlib.sha256(\"keita\".encode(\"utf-8\")).hexdigest()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'%0D%0A'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b\"%0D%0A\".decode(\"utf-8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -115,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
