--- a/20151015_Iterator_generator.ipynb
+++ b/20151015_Iterator_generator.ipynb
@@ -19,8 +19,7 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "iterator\n",
+    "#iterator\n",
     "1. 次の要素を取り出す\n",
     "2.要素が終わったかどうかを判別する\n",
     "イテレータに変換できるオブジェクトをいてレート可能オブジェクトという\n",
@@ -218,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
